--- a/landing/package.json
+++ b/landing/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "Velto",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -48,6 +48,7 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongodb": "^6.18.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
