--- a/memory/package.json
+++ b/memory/package.json
@@ -1,20 +1,19 @@
 {
   "name": "velto-memory-backend",
   "version": "1.0.0",
-  "description": "Velto Memory Backend - Serverless backend with MCP server for AI context management",
-  "main": "dist/index.js",
+  "description": "Velto Memory Backend - Next.js serverless backend with MCP server for AI context management",
+  "private": true,
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "test": "jest",
     "test:setup": "node test-setup.js",
     "test:api": "node test/test-all-apis.js",
     "test:api:watch": "nodemon --exec 'node test/test-all-apis.js' --watch test/",
     "test:ai": "node test/test-ai-functionality.js",
     "test:ai:watch": "nodemon --exec 'node test/test-ai-functionality.js' --watch test/",
-    "lint": "eslint src/**/*.ts",
-    "format": "prettier --write src/**/*.ts",
     "mcp:dev": "tsx watch src/mcp/server.ts",
     "mcp:build": "tsc src/mcp/server.ts --outDir dist/mcp",
     "mcp:start": "node dist/mcp/server.js"
@@ -26,17 +25,18 @@
     "ai",
     "context",
     "serverless",
-    "mongodb"
+    "mongodb",
+    "nextjs"
   ],
   "author": "Velto Team",
   "license": "MIT",
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.18.0",
+    "@anthropic-ai/sdk": "^0.4.0",
     "@google/genai": "^1.14.0",
     "@google/generative-ai": "^0.21.0",
     "@langchain/anthropic": "^0.1.0",
     "@langchain/openai": "^0.0.14",
-    "@modelcontextprotocol/sdk": "^0.4.0",
+    "@modelcontextprotocol/sdk": "^1.11.0",
     "anthropic-ai": "^0.0.10",
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.0",
@@ -52,9 +52,12 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "next": "^14.0.0",
     "node-cron": "^3.0.3",
     "openai": "^4.20.1",
     "rate-limiter-flexible": "^4.0.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "redis": "^4.6.10",
     "sharp": "^0.33.0",
     "uuid": "^9.0.1",
@@ -71,13 +74,19 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.0",
     "@types/node-cron": "^3.0.11",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
+    "eslint-config-next": "^14.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
+    "postcss": "^8.4.32",
     "prettier": "^3.1.0",
+    "tailwindcss": "^3.3.6",
     "ts-jest": "^29.1.1",
     "tsx": "^4.6.0",
     "typescript": "^5.3.2"
